tests/nala/error/runtime/assign-void.nl

func returnVoid() {
    const void = 'void';
}

const test = returnVoid();

print(test);